--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -17,7 +17,7 @@
 <div id="div1">
     <img src="../img/fsil.png" width="120px" height="120px">
     <h1>
-        <a href="home.html" class="">Forum Studi Islam</a>
+        <a href="home.html" class=""><h1>Forum Studi Islam</h1></a>
     </h1>
 </div>
 <div id="div2">
