--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,8 +1,6 @@
-</div>
-<div id="footer" class="container-fluid">
+<footer id="footer" class="container-fluid">
 <!--<img src="../img/loc.png" width="35" height="35">-->
 <h4 class="bi bi-geo-alt ">  Jl.Syekh Jamil Jambek No.36, Pakan Kurai, Kec. Guguk Panjang, Kota Bukittinggi</h4>
 <!--<img src="../img/ig.png" width="35" height="35">-->
 <h4 class="bi bi-instagram"><!--<a href=https://instagram.com/fsi.smansa_landbouw?utm_medium=copy_link class="">-->  @fsi.smansa_landbouw</h4>
-</div>
-</div>
+</footer>
