in progress fix some html

--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,11 @@
 <!DOCTYPE HTML>
 
 <head>
-    <title>Home</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <title>Bookshelf</title>
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/shelf.css">
+    <script src="../js/include.js"></script>
 </head>
 
 <body>
@@ -46,11 +44,6 @@
         <div id="body">
             <h2 id="progress">Error 404<br/>Masih dalam Progress</h2>
         <div id="footer">
-            <footer>
-                <img src="../img/loc.png" width="35" height="35">
-                <p>Jl.Syekh Jamil Jambek No.36, Pakan Kurai, Kec. Guguk Panjang, Kota Bukittinggi</p>
-                <img src="../img/ig.png" width="35" height="35"><a href=https://instagram.com/fsi.smansa_landbouw?utm_medium=copy_link>@fsi.smasa_landbouw</a>
-            </footer>
         </div>
     </div>
 </body>
