--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -20,9 +20,10 @@
         <a href="home.html" class=""><h1>Forum Studi Islam</h1></a>
     </h1>
 </div>
-<div id="div2">
-    <button id="toggle">Rak Buku</button><a href="../html/buletin.html"><button id="buletin">Buletin</button></a><a href="../html/video.html"><button id="video">Video</button></a>
+<nav id="div2">
+    <button id="toggle">Rak Buku</button><a href="../html/buletin.html"><button id="buletin"><h1>Buletin</h1></button></a><a href="../html/video.html"><button id="video">Video</button></a>
     <a href="../html/dokumentasi.html"><button id="dokumentasi">Galeri</button></a><a href="../html/exkul.html"><button id="exkul">Tentang</button></a>
+</nav>
     <div id="div3">
         <ul>
             <li class="h" id="ha">Buku PAI Sekolah</li>
@@ -45,5 +46,4 @@
                 </ul>
             </div>
     </div>
-</div>
 </body>
