--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,5 +1,5 @@
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1024">
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/home.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
